name:                vty-examples
version:             5.37
license:             BSD3
license-file:        LICENSE
author:              AUTHORS
maintainer:          Jonathan Daugherty (cygnus@foobox.com)
homepage:            https://github.com/jtdaugherty/vty
category:            User Interfaces
synopsis:            Examples programs using the vty library.
description:
  vty is terminal GUI library in the niche of ncurses. It is intended to
  be easy to use, have no confusing corner cases, and good support for
  common terminal types.
  .
  vty-benchmark - benchmarks vty. A series of tests that push random
  pictures to the terminal.
  .
  &#169; Corey O'Connor; BSD3 license.
  .
  &#169; Jonathan Daugherty; BSD3 license.
cabal-version:        >= 1.18.0
build-type:           Simple

source-repository head
  type: git
  location: https://github.com/jtdaugherty/vty.git

executable vty-benchmark
  main-is:             benchmark.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       base >= 4 && < 5,
                       vty,
                       vty-tests,
                       bytestring,
                       random,
                       unix

  other-modules:       BenchImageFuzz
                       BenchNoDiffOpt
                       BenchRenderChar
                       BenchVerticalScroll
