name:                vty-examples
version:             5.0.1
license:             BSD3
license-file:        ../LICENSE
author:              AUTHORS
maintainer:          Corey O'Connor (coreyoconnor@gmail.com)
homepage:            https://github.com/coreyoconnor/vty
category:            User Interfaces
synopsis:            Examples programs using the vty library.
description:
  vty is terminal GUI library in the niche of ncurses.  It is intended to be easy to use, have no
  confusing corner cases, and good support for common terminal types.
  .
  vty-interactive-terminal-test - interactive test. Useful for building a bug report for vtys author.
  vty-event-echo - view a input event log for vty. Example of interacting with user.
  vty-rouge - A bad rouge-like game. Go from the entrance to exit. Example of layers
  vty-benchmark - benchmarks vty. A series of tests that push random pictures to the terminal.
  .
  &#169; Corey O'Connor; BSD3 license.
cabal-version:        >= 1.18.0
build-type:           Simple

executable vty-interactive-terminal-test
  main-is:             interactive_terminal_test.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty == 5.*,
                       base >= 4 && < 5,
                       bytestring,
                       containers,
                       data-default >= 0.5.3,
                       deepseq >= 1.1 && < 1.4,
                       lens,
                       mtl >= 1.1.1.0 && < 2.3,
                       parallel >= 2.2 && < 3.3,
                       parsec >= 2 && < 4,
                       string-qq,
                       terminfo >= 0.3 && < 0.5,
                       text >= 0.11.3,
                       unix,
                       utf8-string >= 0.3 && < 0.4,
                       vector >= 0.7

executable vty-event-echo
  main-is:             EventEcho.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty == 5.*,
                       base >= 4 && < 5,
                       array >= 0.4 && < 2.0,
                       bytestring,
                       containers,
                       data-default >= 0.5.3,
                       lens,
                       mtl >= 1.1.1.0 && < 2.3,
                       parallel >= 2.2 && < 3.3,
                       text >= 0.11.3,
                       utf8-string >= 0.3 && < 0.4,
                       vector >= 0.7

executable vty-rouge
  main-is:             Rouge.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty == 5.*,
                       base >= 4 && < 5,
                       array >= 0.4 && < 2.0,
                       bytestring,
                       containers,
                       data-default >= 0.5.3,
                       lens,
                       mtl >= 1.1.1.0 && < 2.3,
                       parallel >= 2.2 && < 3.3,
                       random >= 1.0 && < 2.0,
                       text >= 0.11.3,
                       utf8-string >= 0.3 && < 0.4,
                       vector >= 0.7

executable vty-benchmark
  main-is:             benchmark.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty == 5.*,
                       base >= 4 && < 5,
                       bytestring,
                       Cabal == 1.18.*,
                       containers,
                       data-default >= 0.5.3,
                       deepseq >= 1.1 && < 1.4,
                       lens,
                       mtl >= 1.1.1.0 && < 2.3,
                       parallel >= 2.2 && < 3.3,
                       parsec >= 2 && < 4,
                       QuickCheck >= 2.4,
                       random == 1.0.*,
                       string-qq,
                       terminfo >= 0.3 && < 0.5,
                       text >= 0.11.3,
                       unix,
                       utf8-string >= 0.3 && < 0.4,
                       vector >= 0.7

