name:                vty-examples
version:             5.4.0
license:             BSD3
license-file:        ../LICENSE
author:              AUTHORS
maintainer:          Corey O'Connor (coreyoconnor@gmail.com)
homepage:            https://github.com/coreyoconnor/vty
category:            User Interfaces
synopsis:            Examples programs using the vty library.
description:
  vty is terminal GUI library in the niche of ncurses.  It is intended to be easy to use, have no
  confusing corner cases, and good support for common terminal types.
  .
  vty-interactive-terminal-test - interactive test. Useful for building a bug report for vtys author.
  vty-event-echo - view a input event log for vty. Example of interacting with user.
  vty-rogue - A bad rogue-like game. Go from the entrance to exit. Example of layers
  vty-benchmark - benchmarks vty. A series of tests that push random pictures to the terminal.
  .
  &#169; Corey O'Connor; BSD3 license.
cabal-version:        >= 1.18.0
build-type:           Simple

executable vty-interactive-terminal-test
  main-is:             interactive_terminal_test.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty >= 5.2.11,
                       base >= 4 && < 5,
                       bytestring,
                       containers,
                       data-default,
                       deepseq,
                       lens,
                       mtl,
                       parallel,
                       parsec,
                       string-qq,
                       terminfo,
                       text,
                       unix,
                       utf8-string,
                       vector

executable vty-event-echo
  main-is:             EventEcho.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
                       FlexibleContexts
  ghc-options:         -threaded

  build-depends:       vty >= 5.2.11,
                       base >= 4 && < 5,
                       array,
                       bytestring,
                       containers,
                       data-default,
                       lens,
                       mtl,
                       parallel,
                       text,
                       utf8-string,
                       vector

executable vty-rogue
  main-is:             Rogue.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty >= 5.2.11,
                       base >= 4 && < 5,
                       array,
                       bytestring,
                       containers,
                       data-default,
                       lens,
                       mtl,
                       parallel,
                       random,
                       text,
                       utf8-string,
                       vector

executable vty-benchmark
  main-is:             benchmark.hs

  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  ghc-options:         -threaded

  build-depends:       vty >= 5.2.11,
                       base >= 4 && < 5,
                       bytestring,
                       Cabal,
                       containers,
                       data-default,
                       deepseq,
                       lens,
                       mtl,
                       parallel,
                       parsec,
                       QuickCheck,
                       random,
                       string-qq,
                       terminfo,
                       text,
                       unix,
                       utf8-string,
                       vector

